# SPDX-License-Identifier: BSD-3-Clause
# Copyright (C) 2023, E36 Knots

[package]
name = "ash"
description = "Ash Rust SDK"
version = "0.1.0"
authors = ["E36 Knots"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/AshAvalanche/ash-rs"
license = "BSD-3-Clause"
keywords = ["blockchain", "avalanche", "sdk", "rust", "ash"]

[dependencies]
avalanche-types = "0.0"
config = { version = "0.13.3", features = ["yaml"] }
ethers = { version = "1.0.2", features = ["rustls"] }
hex = "0.4.3"
regex = "1.7.1"
serde = "1.0.152"
serde-aux = "4.1.2"
serde_yaml = "0.9.17"
ureq = { version = "2.6.2", features = ["json"] }

[dev-dependencies]
tempfile = "3.3.0"
