# SPDX-License-Identifier: BSD-3-Clause
# Copyright (c) 2023, E36 Knots

[package]
name = "ash_cli"
description = "Ash CLI"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
ash_sdk = { path = "../ash_sdk", version = "0.4.0-alpha.1" }
clap = { version = "4.0.32", features = ["derive", "env", "cargo", "string"] }
colored = "2.0.0"
exitcode = "1.1.2"
indent = "0.1.1"
indoc = "2.0.0"
serde_json = "1.0.91"
async-std = { version = "1.10.0", features = ["attributes", "tokio1"] }
enum-display-derive = "0.1.1"
rust_decimal = "1.29.1"
hex = "0.4.3"
chrono = "0.4.24"
keyring = "2.0.5"
whoami = "1.4.1"
jsonwebtoken = "8.3.0"
serde = "1.0.188"
prettytable = "0.10.0"
base64 = "0.21.4"
inquire = "0.6.2"
shellexpand = "3.1.0"

[[bin]]
name = "ash"
path = "src/main.rs"
