# SPDX-License-Identifier: BSD-3-Clause
# Copyright (c) 2023, E36 Knots

[package]
name = "ash_sdk"
description = "Ash Rust SDK"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
avalanche-types = { version = "0.0.393", features = [
	"jsonrpc_client",
	"wallet",
	"subnet_evm",
] }
config = { version = "0.13.3", features = ["yaml"] }
ethers = { version = "1.0.2", features = ["rustls"] }
hex = "0.4.3"
regex = "1.7.1"
serde = "1.0.152"
serde-aux = "4.1.2"
serde_yaml = "0.9.17"
thiserror = "1.0.39"
ureq = { version = "2.6.2", features = ["json", "native-certs"] }
async-std = { version = "1.10.0", features = ["attributes", "tokio1"] }
# reqwest is used by ethers
# We need to enable the rustls-tls-native-roots feature to support self-signed certificates
reqwest = { version = "0.11.14", features = ["rustls-tls-native-roots"] }
enum-display-derive = "0.1.1"
serde_json = "1.0.96"
strum = { version = "0.24", features = ["derive"] }
chrono = { version = "0.4.24", features = ["clock"] }

[dev-dependencies]
serial_test = "2.0.0"
tempfile = "3.3.0"
