# SPDX-License-Identifier: BSD-3-Clause
# Copyright (c) 2023, E36 Knots

[package]
name = "ashcli"
description = "Ash CLI"
version = "0.1.0"
authors = ["E36 Knots"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/AshAvalanche/ash-rs"
license = "BSD-3-Clause"
keywords = ["blockchain", "avalanche", "sdk", "rust", "ash"]

[dependencies]
ash = { path = "../ash" }
clap = { version = "4.0.32", features = ["derive"] }
exitcode = "1.1.2"
indent = "0.1.1"
indoc = "2.0.0"
serde_json = "1.0.91"

[[bin]]
name = "ash"
path = "src/main.rs"
